--- a/frontend-barberqueue/src/app/shared/components/navbar/navbar.component.css
+++ b/frontend-barberqueue/src/app/shared/components/navbar/navbar.component.css
@@ -1,8 +1,9 @@
 .navbar {
   width: 100%;
+  display: flex;
   height: 125px;
   position: relative;
-  background-color: #1f1f1f;
+  background-color: #232323;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 
@@ -20,6 +21,7 @@
   cursor: pointer;
   z-index: 1001;
   justify-content: center;
+  align-items: start !important ;
 }
 
 .hamburger-btn span {
